add new site slogan

--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -1,7 +1,7 @@
 uuid: 12d5b8b4-8d7e-4396-9eba-31b2c0f8d8bc
 name: the-site-io-1
 mail: shareefrancis11@gmail.com
-slogan: ''
+slogan: 'Building things that matter'
 page:
   403: ''
   404: ''
